# 2dgs-nerfstudio

./: .gitmodules  README.md  pyproject.toml
surfel-splatting/: surfel_splat.py
